fix:implemented submit event managing

--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
     <h1>Let's Create a List</h1>
     <form class="task-form">
       <input type="text" class="insert-task" />
-      <button type="button" class="add-button">ADD</button>
+      <button type="submit" class="add-button">ADD</button>
     </form>
-    <ul class="unordered-list">
-      <li style="list-style: none">
-        <input type="checkbox" /> <span class="ul-item"></span>
-      </li>
-    </ul>
+    <ul class="ul-item"></ul>
 
     <script src="./script.js"></script>
   </body>
